[package]
name = "sup-smsac"
version = "0.1.0-beta.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["sup39 <sms@sup39.dev>"]
repository = "https://github.com/sup39/sup-smsac"
description = "A tool to support Super Mario Sunshine academic research and TAS."

[dependencies]
sup-smsac-derive = { path = "./sup-smsac-derive" }
encoding_rs = "0.8.32"
windows = {version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
]}
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tungstenite = "0.10.0"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
open = "5.0.0"
clap = { version = "4.3.16", features = ["derive"] }
mime_guess = "2.0.4"
urlencoding = "2.1.2"
serde = { version = "1.0.174", features = ["rc", "derive"] }
